完成导航栏但未加入链接，添加主面板（有bug未修复）

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,24 @@
 {
 	color: #FFFFFF;
 }
+/* .mypanel
+{
+	width: 10px;
+	height: 585px;
+} */
+.pla
+{
+	left: 29%;
+	border-radius: 10px;
+	-moz-box-shadow:4px 10px 20px #8F8F8F;
+	-webkit-box-shadow:4px 10px 20px #8F8F8F; 
+	box-shadow:4px 10px 20px #8F8F8F;
+	width: 700px;
+	height: 600px;
+	position: absolute;
+    /* left: 50%; */
+    /* margin-left: 300; */
+    /* top: 50%; */
+    /* margin-top: 250; */
+	
+}
