--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,10 @@
 }
 
 .slideshow {
-    height: 400px;
-    width: 100%;
+    height: 500px;
+    width: 99.9%;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: -25px;
     overflow: hidden;
     position: relative;
 }
@@ -29,7 +29,7 @@
     height: 50px;
     width: 100%;
     position: absolute;
-    top: 45%;
+    top: 45%; /*45%*/
     z-index: 2;
 }
 
@@ -47,7 +47,7 @@
     height: 18px;
     display: inline-block;
     border-radius: 50px;
-    background: #efefef;
+    background: #CACDCF;
     font-size: 12px;
     line-height: 18px;
     text-align: center;
@@ -55,8 +55,8 @@
 }
 
 .slideshow .ra-show .active {
-    background: #ff9000;
-    box-shadow: 0 0 10px #FF9000;
+    background: #FFFFFF;
+    box-shadow: 0 0 10px #CACDCF;
 }
 
 .btn span {
@@ -100,6 +100,6 @@
 }
 
 .slideshow ul li img {
-    height: 400px;
+    height: 500px;
     width: 100%;
 }
